--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         let myChart = null;
 
         // Discord Webhook URL (replace with your own)
-        const DISCORD_WEBHOOK_URL = "YOUR_DISCORD_WEBHOOK_URL";
+        const DISCORD_WEBHOOK_URL = "https://discordapp.com/api/webhooks/1417403074116325386/2RJodjx-QvvAv3wNtg00aLxkHnknk3tM421GpX4_cenQcy3NMHYyhSG5dU6u0wTsoBjR";
 
         document.addEventListener('DOMContentLoaded', async () => {
             if (Object.keys(firebaseConfig).length > 0) {
@@ -251,7 +251,7 @@
         }
         
         async function checkLowStock(items) {
-            if (DISCORD_WEBHOOK_URL === "YOUR_DISCORD_WEBHOOK_URL") {
+            if (DISCORD_WEBHOOK_URL === "https://discordapp.com/api/webhooks/1417403074116325386/2RJodjx-QvvAv3wNtg00aLxkHnknk3tM421GpX4_cenQcy3NMHYyhSG5dU6u0wTsoBjR") {
                 console.warn("Discord Webhook URL not set. Skipping low stock notifications.");
                 return;
             }
