--- a/index.html
+++ b/index.html
@@ -648,6 +648,78 @@
                 console.error("Error deleting document:", error);
             }
         }
+        
+        // Modal functions for inventory
+        window.showEditInventoryModal = (id, name, unit, current_stock, low_threshold) => {
+            modalTitle.textContent = 'แก้ไขรายการสต็อก';
+            modalBody.innerHTML = `
+                <div class="space-y-4 text-left">
+                    <div>
+                        <label class="block text-sm font-medium text-gray-700 mb-1">ชื่อวัตถุดิบ</label>
+                        <input type="text" id="modal-inventory-name" value="${name}" class="w-full px-3 py-2 border border-gray-300 rounded-md">
+                    </div>
+                    <div>
+                        <label class="block text-sm font-medium text-gray-700 mb-1">หน่วยนับ</label>
+                        <input type="text" id="modal-inventory-unit" value="${unit}" class="w-full px-3 py-2 border border-gray-300 rounded-md">
+                    </div>
+                    <div>
+                        <label class="block text-sm font-medium text-gray-700 mb-1">สต็อกปัจจุบัน</label>
+                        <input type="number" id="modal-inventory-stock" value="${current_stock}" class="w-full px-3 py-2 border border-gray-300 rounded-md">
+                    </div>
+                    <div>
+                        <label class="block text-sm font-medium text-gray-700 mb-1">เกณฑ์แจ้งเตือนสต็อกต่ำ</label>
+                        <input type="number" id="modal-inventory-threshold" value="${low_threshold}" class="w-full px-3 py-2 border border-gray-300 rounded-md">
+                    </div>
+                </div>
+            `;
+            modalConfirm.onclick = () => {
+                const newName = document.getElementById('modal-inventory-name').value;
+                const newUnit = document.getElementById('modal-inventory-unit').value;
+                const newStock = parseFloat(document.getElementById('modal-inventory-stock').value);
+                const newThreshold = parseFloat(document.getElementById('modal-inventory-threshold').value);
+                editInventory(id, newName, newUnit, newStock, newThreshold);
+                modal.style.display = 'none';
+            };
+            modalCancel.onclick = () => {
+                modal.style.display = 'none';
+            };
+            modal.style.display = 'flex';
+        };
+
+        window.showDeleteInventoryModal = (id) => {
+            modalTitle.textContent = 'ยืนยันการลบสต็อก';
+            modalBody.innerHTML = `<p>คุณแน่ใจหรือไม่ที่จะลบรายการสต็อกนี้?</p>`;
+            modalConfirm.onclick = () => {
+                deleteInventory(id);
+                modal.style.display = 'none';
+            };
+            modalCancel.onclick = () => {
+                modal.style.display = 'none';
+            };
+            modal.style.display = 'flex';
+        };
+
+        async function editInventory(id, name, unit, current_stock, low_threshold) {
+            if (!db || !userId) return;
+            try {
+                const inventoryRef = doc(db, `artifacts/${appId}/public/data/inventory`, id);
+                await updateDoc(inventoryRef, { name, unit, current_stock, low_threshold });
+                console.log("Inventory item updated successfully.");
+            } catch (error) {
+                console.error("Error updating inventory document:", error);
+            }
+        }
+        
+        async function deleteInventory(id) {
+            if (!db || !userId) return;
+            try {
+                const inventoryRef = doc(db, `artifacts/${appId}/public/data/inventory`, id);
+                await deleteDoc(inventoryRef);
+                console.log("Inventory item deleted successfully.");
+            } catch (error) {
+                console.error("Error deleting inventory document:", error);
+            }
+        }
 
         // Close modal when clicking outside
         window.onclick = function(event) {
