--- a/index.html
+++ b/index.html
@@ -489,6 +489,21 @@
                 const profit = (transaction.income || 0) - totalTransactionExpense;
                 const row = document.createElement('tr');
                 row.classList.add('hover:bg-gray-50', 'text-gray-700', 'text-sm');
+                const transactionData = {
+                    id: transaction.id,
+                    note: transaction.note || '',
+                    buyer_name: transaction.buyer_name || '',
+                    order_id: transaction.order_id || '',
+                    order_number: transaction.order_number || '',
+                    driver_name: transaction.driver_name || '',
+                    income: transaction.income || 0,
+                    gp_fee_excl_vat: transaction.gp_fee_excl_vat || 0,
+                    shipping_discount_fee_excl_vat: transaction.shipping_discount_fee_excl_vat || 0,
+                    expense: transaction.expense || 0,
+                    order_list: transaction.order_list || '',
+                    vat_amount: transaction.vat_amount || 0,
+                    raw_material_cost: transaction.raw_material_cost || 0
+                };
                 row.innerHTML = `
                     <td class="px-4 py-2 border-b whitespace-nowrap">${transaction.date.split('T')[0]}</td>
                     <td class="px-4 py-2 border-b">${transaction.channel || ''}</td>
@@ -506,7 +521,7 @@
                     <td class="px-4 py-2 border-b text-right ${profit >= 0 ? 'text-teal-600' : 'text-rose-600'}">${profit.toLocaleString('th-TH', { minimumFractionDigits: 2, maximumFractionDigits: 2 })}</td>
                     <td class="px-4 py-2 border-b">${transaction.note || ''}</td>
                     <td class="px-4 py-2 border-b text-center space-x-2 whitespace-nowrap">
-                        <button onclick="window.showEditModal('${transaction.id}', '${transaction.note || ''}', '${transaction.buyer_name || ''}', '${transaction.order_id || ''}', '${transaction.order_number || ''}', '${transaction.driver_name || ''}', ${transaction.income || 0}, ${transaction.gp_fee_excl_vat || 0}, ${transaction.shipping_discount_fee_excl_vat || 0}, ${transaction.expense || 0}, '${transaction.order_list || ''}', ${transaction.vat_amount || 0}, ${transaction.raw_material_cost || 0})" class="text-blue-500 hover:text-blue-700 font-medium">แก้ไข</button>
+                        <button onclick='window.showEditModal(${JSON.stringify(transactionData)})' class="text-blue-500 hover:text-blue-700 font-medium">แก้ไข</button>
                         <button onclick="window.showDeleteModal('${transaction.id}')" class="text-red-500 hover:text-red-700 font-medium">ลบ</button>
                     </td>
                 `;
@@ -527,57 +542,57 @@
         const modalConfirm = document.getElementById('modal-confirm');
         const modalCancel = document.getElementById('modal-cancel');
 
-        window.showEditModal = (id, note, buyer_name, order_id, order_number, driver_name, income, gp_fee_excl_vat, shipping_discount_fee_excl_vat, expense, order_list, vat_amount, raw_material_cost) => {
+        window.showEditModal = (transactionData) => {
             modalTitle.textContent = 'แก้ไขรายการ';
             modalBody.innerHTML = `
                 <div class="space-y-4 text-left">
                     <div>
                         <label class="block text-sm font-medium text-gray-700 mb-1">ชื่อผู้ซื้อ</label>
-                        <input type="text" id="modal-buyer-name" value="${buyer_name}" class="w-full px-3 py-2 border border-gray-300 rounded-md">
+                        <input type="text" id="modal-buyer-name" value="${transactionData.buyer_name}" class="w-full px-3 py-2 border border-gray-300 rounded-md">
                     </div>
                     <div>
                         <label class="block text-sm font-medium text-gray-700 mb-1">รหัสใบสั่งซื้อ</label>
-                        <input type="text" id="modal-order-id" value="${order_id}" class="w-full px-3 py-2 border border-gray-300 rounded-md">
+                        <input type="text" id="modal-order-id" value="${transactionData.order_id}" class="w-full px-3 py-2 border border-gray-300 rounded-md">
                     </div>
                     <div>
                         <label class="block text-sm font-medium text-gray-700 mb-1">เลขออเดอร์</label>
-                        <input type="text" id="modal-order-number" value="${order_number}" class="w-full px-3 py-2 border border-gray-300 rounded-md">
+                        <input type="text" id="modal-order-number" value="${transactionData.order_number}" class="w-full px-3 py-2 border border-gray-300 rounded-md">
                     </div>
                     <div>
                         <label class="block text-sm font-medium text-gray-700 mb-1">คนขับ</label>
-                        <input type="text" id="modal-driver-name" value="${driver_name}" class="w-full px-3 py-2 border border-gray-300 rounded-md">
+                        <input type="text" id="modal-driver-name" value="${transactionData.driver_name}" class="w-full px-3 py-2 border border-gray-300 rounded-md">
                     </div>
                     <div>
                         <label class="block text-sm font-medium text-gray-700 mb-1">รายการสั่งซื้อ</label>
-                        <textarea id="modal-order-list" class="w-full px-3 py-2 border border-gray-300 rounded-md">${order_list}</textarea>
+                        <textarea id="modal-order-list" class="w-full px-3 py-2 border border-gray-300 rounded-md">${transactionData.order_list}</textarea>
                     </div>
                     <div>
                         <label class="block text-sm font-medium text-gray-700 mb-1">รายรับ</label>
-                        <input type="number" id="modal-income" value="${income}" class="w-full px-3 py-2 border border-gray-300 rounded-md">
+                        <input type="number" id="modal-income" value="${transactionData.income}" class="w-full px-3 py-2 border border-gray-300 rounded-md">
                     </div>
                     <div>
                         <label class="block text-sm font-medium text-gray-700 mb-1">ค่าใช้จ่าย GP (ไม่รวม VAT)</label>
-                        <input type="number" id="modal-gp-fee-excl-vat" value="${gp_fee_excl_vat}" class="w-full px-3 py-2 border border-gray-300 rounded-md">
+                        <input type="number" id="modal-gp-fee-excl-vat" value="${transactionData.gp_fee_excl_vat}" class="w-full px-3 py-2 border border-gray-300 rounded-md">
                     </div>
                     <div>
                         <label class="block text-sm font-medium text-gray-700 mb-1">ค่าส่วนลดค่าส่ง (ไม่รวม VAT)</label>
-                        <input type="number" id="modal-shipping-discount-fee-excl-vat" value="${shipping_discount_fee_excl_vat}" class="w-full px-3 py-2 border border-gray-300 rounded-md">
+                        <input type="number" id="modal-shipping-discount-fee-excl-vat" value="${transactionData.shipping_discount_fee_excl_vat}" class="w-full px-3 py-2 border border-gray-300 rounded-md">
                     </div>
                     <div>
                         <label class="block text-sm font-medium text-gray-700 mb-1">ค่า VAT</label>
-                        <input type="number" id="modal-vat-amount" value="${vat_amount}" class="w-full px-3 py-2 border border-gray-300 rounded-md">
+                        <input type="number" id="modal-vat-amount" value="${transactionData.vat_amount}" class="w-full px-3 py-2 border border-gray-300 rounded-md">
                     </div>
                     <div>
                         <label class="block text-sm font-medium text-gray-700 mb-1">ค่าวัตถุดิบ</label>
-                        <input type="number" id="modal-raw-material-cost" value="${raw_material_cost}" class="w-full px-3 py-2 border border-gray-300 rounded-md">
+                        <input type="number" id="modal-raw-material-cost" value="${transactionData.raw_material_cost}" class="w-full px-3 py-2 border border-gray-300 rounded-md">
                     </div>
                     <div>
                         <label class="block text-sm font-medium text-gray-700 mb-1">ค่าใช้จ่ายอื่นๆ</label>
-                        <input type="number" id="modal-expense" value="${expense}" class="w-full px-3 py-2 border border-gray-300 rounded-md">
+                        <input type="number" id="modal-expense" value="${transactionData.expense}" class="w-full px-3 py-2 border border-gray-300 rounded-md">
                     </div>
                     <div>
                         <label class="block text-sm font-medium text-gray-700 mb-1">หมายเหตุ</label>
-                        <input type="text" id="modal-note" value="${note}" class="w-full px-3 py-2 border border-gray-300 rounded-md">
+                        <input type="text" id="modal-note" value="${transactionData.note}" class="w-full px-3 py-2 border border-gray-300 rounded-md">
                     </div>
                 </div>
             `;
@@ -593,7 +608,7 @@
                 const newOrderNumber = document.getElementById('modal-order-number').value;
                 const newDriverName = document.getElementById('modal-driver-name').value;
                 const newOrderList = document.getElementById('modal-order-list').value;
-                editTransaction(id, newIncome, newGpFeeExclVat, newShippingDiscountFeeExclVat, newVatAmount, newRawMaterialCost, newExpense, newNote, newBuyerName, newOrderNumber, newDriverName, newOrderList);
+                editTransaction(transactionData.id, newIncome, newGpFeeExclVat, newShippingDiscountFeeExclVat, newVatAmount, newRawMaterialCost, newExpense, newNote, newBuyerName, newOrderNumber, newDriverName, newOrderList);
                 modal.style.display = 'none';
             };
             modalCancel.onclick = () => {
