--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         // A single function to send messages to Discord
         async function sendDiscordMessage(message, embed = null) {
             if (!DISCORD_WEBHOOK_URL || DISCORD_WEBHOOK_URL === "https://discordapp.com/api/webhooks/1417426298954846289/6DOwlCNNYkcZsJILbFhKqAvX21tp_ZulqyJji6ErC5kR24CNWdv4X-_1ktGbMI5V4ZEp") {
-                console.warn("Discord Webhook URL not set. Skipping notification.");
+                console.warn("https://discordapp.com/api/webhooks/1417426298954846289/6DOwlCNNYkcZsJILbFhKqAvX21tp_ZulqyJji6ErC5kR24CNWdv4X-_1ktGbMI5V4ZEp");
                 return;
             }
 
@@ -1028,3 +1028,4 @@
 </body>
 
 </html>
+
