--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         
         // A single function to send messages to Discord
         async function sendDiscordMessage(message, embed = null) {
-            if (!DISCORD_WEBHOOK_URL || DISCORD_WEBHOOK_URL === "https://discordapp.com/api/webhooks/1417403074116325386/2RJodjx-QvvAv3wNtg00aLxkHnknk3tM421GpX4_cenQcy3NMHYyhSG5dU6u0wTsoBjR") {
+            if (!DISCORD_WEBHOOK_URL) {
                 console.warn("Discord Webhook URL not set. Skipping notification.");
                 return;
             }
@@ -1028,4 +1028,3 @@
 </body>
 
 </html>
-
