--- a/index.html
+++ b/index.html
@@ -181,7 +181,8 @@
                 buyer_name: formData.get('buyer_name'),
                 order_id: formData.get('order_id'),
                 order_number: formData.get('order_number'),
-                driver_name: formData.get('driver_name')
+                driver_name: formData.get('driver_name'),
+                recordedByUserId: userId // Add the user ID
             };
 
             try {
@@ -191,7 +192,7 @@
                 console.log("Transaction added successfully.");
                 updateInventoryOnSale(data);
                 
-                const transactionMessage = `✅ **รายการใหม่ถูกบันทึก:** รายรับ ${data.income.toLocaleString()} บาท จาก ${data.channel}.`;
+                const transactionMessage = `✅ **รายการใหม่ถูกบันทึก:** รายรับ ${data.income.toLocaleString()} บาท จาก ${data.channel}. โดย ${userId}`;
                 sendDiscordMessage(transactionMessage);
 
             } catch (error) {
@@ -220,7 +221,7 @@
                 await setDoc(inventoryDocRef, data);
                 e.target.reset();
                 console.log("Inventory item added/updated successfully.");
-                const inventoryMessage = `📦 **ข้อมูลสต็อกอัปเดต:** ${data.name} มีสต็อกใหม่ ${data.current_stock} ${data.unit}.`;
+                const inventoryMessage = `📦 **ข้อมูลสต็อกอัปเดต:** ${data.name} มีสต็อกใหม่ ${data.current_stock} ${data.unit}. โดย ${userId}`;
                 sendDiscordMessage(inventoryMessage);
             } catch (error) {
                 console.error("Error adding/updating inventory item: ", error);
@@ -498,7 +499,7 @@
             let totalExpense = 0;
 
             if (transactions.length === 0) {
-                tableBody.innerHTML = `<tr><td colspan="16" class="text-center py-4 text-gray-500">ยังไม่มีข้อมูลการทำธุรกรรม</td></tr>`;
+                tableBody.innerHTML = `<tr><td colspan="17" class="text-center py-4 text-gray-500">ยังไม่มีข้อมูลการทำธุรกรรม</td></tr>`;
             }
 
             transactions.forEach(transaction => {
@@ -522,7 +523,8 @@
                     expense: transaction.expense || 0,
                     order_list: transaction.order_list || '',
                     vat_amount: transaction.vat_amount || 0,
-                    raw_material_cost: transaction.raw_material_cost || 0
+                    raw_material_cost: transaction.raw_material_cost || 0,
+                    recordedByUserId: transaction.recordedByUserId || ''
                 };
                 row.innerHTML = `
                     <td class="px-4 py-2 border-b whitespace-nowrap">${transaction.date.split('T')[0]}</td>
@@ -540,6 +542,7 @@
                     <td class="px-4 py-2 border-b text-right">${(transaction.expense || 0).toLocaleString('th-TH', { minimumFractionDigits: 2, maximumFractionDigits: 2 })}</td>
                     <td class="px-4 py-2 border-b text-right ${profit >= 0 ? 'text-teal-600' : 'text-rose-600'}">${profit.toLocaleString('th-TH', { minimumFractionDigits: 2, maximumFractionDigits: 2 })}</td>
                     <td class="px-4 py-2 border-b">${transaction.note || ''}</td>
+                    <td class="px-4 py-2 border-b text-sm font-mono whitespace-nowrap">${transaction.recordedByUserId ? transaction.recordedByUserId.substring(0, 8) + '...' : ''}</td>
                     <td class="px-4 py-2 border-b text-center space-x-2 whitespace-nowrap">
                         <button onclick='window.showEditModal(${JSON.stringify(transactionData)})' class="text-blue-500 hover:text-blue-700 font-medium">แก้ไข</button>
                         <button onclick="window.showDeleteModal('${transaction.id}')" class="text-red-500 hover:text-red-700 font-medium">ลบ</button>
@@ -665,10 +668,11 @@
                     buyer_name: newBuyerName,
                     order_number: newOrderNumber,
                     driver_name: newDriverName,
-                    order_list: newOrderList
+                    order_list: newOrderList,
+                    recordedByUserId: userId // Add the user ID
                 });
                 console.log("Transaction updated successfully.");
-                const transactionMessage = `✏️ **รายการถูกแก้ไข:** รายการ ${newOrderNumber} ถูกแก้ไขโดยผู้ใช้.`;
+                const transactionMessage = `✏️ **รายการถูกแก้ไข:** รายการ ${newOrderNumber} ถูกแก้ไขโดยผู้ใช้. โดย ${userId}`;
                 sendDiscordMessage(transactionMessage);
             } catch (error) {
                 console.error("Error updating document:", error);
@@ -744,7 +748,7 @@
                 const inventoryRef = doc(db, `artifacts/${appId}/public/data/inventory`, id);
                 await updateDoc(inventoryRef, { name, unit, current_stock, low_threshold });
                 console.log("Inventory item updated successfully.");
-                const inventoryMessage = `✏️ **รายการสต็อกถูกแก้ไข:** ${name} มีสต็อกใหม่ ${current_stock} ${unit}.`;
+                const inventoryMessage = `✏️ **รายการสต็อกถูกแก้ไข:** ${name} มีสต็อกใหม่ ${current_stock} ${unit}. โดย ${userId}`;
                 sendDiscordMessage(inventoryMessage);
             } catch (error) {
                 console.error("Error updating inventory document:", error);
@@ -757,7 +761,7 @@
                 const inventoryRef = doc(db, `artifacts/${appId}/public/data/inventory`, id);
                 await deleteDoc(inventoryRef);
                 console.log("Inventory item deleted successfully.");
-                const deleteMessage = `🗑️ **รายการสต็อกถูกลบ:** รายการ ${id} ถูกลบออกจากระบบ.`;
+                const deleteMessage = `🗑️ **รายการสต็อกถูกลบ:** รายการ ${id} ถูกลบออกจากระบบ. โดย ${userId}`;
                 sendDiscordMessage(deleteMessage);
             } catch (error) {
                 console.error("Error deleting inventory document:", error);
@@ -1002,6 +1006,7 @@
                             <th scope="col" class="px-4 py-3 text-right text-xs font-semibold text-gray-500 uppercase tracking-wider">ค่าใช้จ่ายอื่นๆ (บาท)</th>
                             <th scope="col" class="px-4 py-3 text-right text-xs font-semibold text-gray-500 uppercase tracking-wider">กำไร (บาท)</th>
                             <th scope="col" class="px-4 py-3 text-left text-xs font-semibold text-gray-500 uppercase tracking-wider">หมายเหตุ</th>
+                            <th scope="col" class="px-4 py-3 text-left text-xs font-semibold text-gray-500 uppercase tracking-wider">ผู้บันทึก/แก้ไข</th>
                             <th scope="col" class="px-4 py-3 text-center text-xs font-semibold text-gray-500 uppercase tracking-wider">จัดการ</th>
                         </tr>
                     </thead>
