--- a/index.html
+++ b/index.html
@@ -155,9 +155,11 @@
             }
         });
 
-        function showToastNotification(message) {
+        function showToastNotification(message, isSuccess = true) {
             const toast = document.getElementById('toast-notification');
             toast.textContent = message;
+            toast.classList.remove('bg-red-500', 'bg-green-500');
+            toast.classList.add(isSuccess ? 'bg-green-500' : 'bg-red-500');
             toast.classList.add('show');
             setTimeout(() => {
                 toast.classList.remove('show');
