--- a/index.html
+++ b/index.html
@@ -1619,11 +1619,11 @@
                         <select id="order-list-select" name="order_list_select"
                             class="w-full px-4 py-2 border border-slate-300 rounded-lg focus:ring-2 focus:ring-indigo-200 focus:border-indigo-400 text-slate-700 bg-slate-50 shadow-sm">
                             <option value="">เลือกเมนู</option>
+                            class="w-full px-4 py-2 border border-slate-300 rounded-lg focus:ring-2 focus:ring-indigo-200 focus:border-indigo-400 text-slate-700 bg-slate-50 shadow-sm">
                             <option value="">เลือกเมนู</option>
+                            class="w-full px-4 py-2 border border-slate-300 rounded-lg focus:ring-2 focus:ring-indigo-200 focus:border-indigo-400 text-slate-700 bg-slate-50 shadow-sm">
                             <option value="">เลือกเมนู</option>
-                            <option value="">เลือกเมนู</option>
-                            <option value="">เลือกเมนู</option>
-                            <option value="">เลือกเมนู</option>
+                        
                         </select>
                     </div>
                     <div>
