--- a/index.html
+++ b/index.html
@@ -1425,7 +1425,7 @@
                 </form>
             </section>
             
-            <section class="bg-white p-6 rounded-xl shadow-xl mb-8 border border-slate-200">
+             <section class="bg-white p-6 rounded-xl shadow-xl mb-8 border border-slate-200">
                 <h2 class="text-2xl font-bold text-slate-800 mb-4">จัดการสินค้าคงคลัง</h2>
                 <form id="inventory-form" class="grid grid-cols-1 md:grid-cols-4 gap-6">
                     <div>
@@ -1467,6 +1467,44 @@
                         </thead>
                         <tbody id="inventory-table-body" class="bg-white divide-y divide-slate-200">
                             <!-- Inventory rows will be injected here by JavaScript -->
+                        </tbody>
+                    </table>
+                </div>
+                <h3 class="text-xl font-bold text-slate-800 mt-8 mb-4">จัดการต้นทุนวัตถุดิบ</h3>
+                <form id="raw-material-cost-form" class="grid grid-cols-1 md:grid-cols-4 gap-6">
+                    <div>
+                        <label for="cost-item-name" class="block text-sm font-semibold text-slate-700 mb-1">ชื่อวัตถุดิบ</label>
+                        <input type="text" id="cost-item-name" name="cost-item-name" required placeholder="เช่น ไข่ไก่"
+                            class="w-full px-4 py-2 border border-slate-300 rounded-lg focus:ring-2 focus:ring-indigo-200 focus:border-indigo-400 text-slate-700 bg-slate-50 shadow-sm">
+                    </div>
+                    <div>
+                        <label for="cost-unit" class="block text-sm font-semibold text-slate-700 mb-1">หน่วยนับ</label>
+                        <input type="text" id="cost-unit" name="cost-unit" required placeholder="เช่น ฟอง, กิโลกรัม"
+                            class="w-full px-4 py-2 border border-slate-300 rounded-lg focus:ring-2 focus:ring-indigo-200 focus:border-indigo-400 text-slate-700 bg-slate-50 shadow-sm">
+                    </div>
+                    <div>
+                        <label for="cost-per-unit" class="block text-sm font-semibold text-slate-700 mb-1">ราคาต่อหน่วย (บาท)</label>
+                        <input type="number" id="cost-per-unit" name="cost-per-unit" step="0.01" required value="0.00"
+                            class="w-full px-4 py-2 border border-slate-300 rounded-lg focus:ring-2 focus:ring-indigo-200 focus:border-indigo-400 text-slate-700 bg-slate-50 shadow-sm">
+                    </div>
+                    <div class="md:col-span-1 text-right self-end">
+                        <button type="submit" class="w-full px-8 py-3 bg-indigo-600 text-white font-semibold rounded-lg shadow-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 transform transition-transform duration-200 hover:scale-105">
+                            บันทึกต้นทุน
+                        </button>
+                    </div>
+                </form>
+                <div class="overflow-x-auto mt-8 rounded-xl shadow-sm border border-slate-200">
+                    <table class="min-w-full divide-y divide-slate-200">
+                        <thead class="bg-slate-50">
+                            <tr>
+                                <th scope="col" class="px-4 py-3 text-left text-xs font-semibold text-slate-500 uppercase tracking-wider">ชื่อวัตถุดิบ</th>
+                                <th scope="col" class="px-4 py-3 text-left text-xs font-semibold text-slate-500 uppercase tracking-wider">หน่วยนับ</th>
+                                <th scope="col" class="px-4 py-3 text-right text-xs font-semibold text-slate-500 uppercase tracking-wider">ราคาต่อหน่วย (บาท)</th>
+                                <th scope="col" class="px-4 py-3 text-center text-xs font-semibold text-slate-500 uppercase tracking-wider">จัดการ</th>
+                            </tr>
+                        </thead>
+                        <tbody id="raw-material-cost-table-body" class="bg-white divide-y divide-slate-200">
+                            <!-- Raw material cost rows will be injected here by JavaScript -->
                         </tbody>
                     </table>
                 </div>
