--- a/index.html
+++ b/index.html
@@ -1298,7 +1298,10 @@
 
 <body class="bg-gray-100 font-sans leading-normal tracking-normal bg-slate-50">
     <div class="container mx-auto p-4 md:p-8">
-        <header class="text-center mb-8">
+        <header class="relative text-center mb-8">
+            <!-- เพิ่มโลโก้ร้านที่นี่ -->
+            <img src="https://github.com/safareelabaisor-ui/webdelivery/raw/eb89ddc5e12ccc02a1b1feead6afcf7ed5b877e6/k1.png" alt="โลโก้ร้าน" class="absolute top-8 left-8 h-16 w-16 rounded-full shadow-lg">
+            
             <h1 class="text-4xl font-extrabold text-slate-800">บัญชีเดลิเวอรี่ รายรับ-รายจ่าย</h1>
             <p class="text-lg text-slate-600 mt-2">สำหรับร้านโครตจะแมนฮาลาล เดลิเวอรี่</p>
         </header>
