--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
             const data = Object.values(channelData);
             const backgroundColors = [
                 'rgb(16, 185, 129)',  // Emerald-500
-                'rgb(99, 102, 241)',  // Indigo-500
+                'rgb(255, 159, 64)',  // Orange
                 'rgb(244, 63, 94)',   // Rose-500
                 'rgb(245, 158, 11)',  // Amber-500
                 'rgb(59, 130, 246)'   // Blue-500
@@ -703,7 +703,7 @@
             const data = Object.values(expenseData);
             const backgroundColors = [
                 'rgb(255, 99, 132)',  // Red
-                'rgb(255, 159, 64)',  // Orange
+                'rgb(99, 102, 241)',  // Indigo-500
                 'rgb(255, 205, 86)',  // Yellow
                 'rgb(75, 192, 192)',  // Green
                 'rgb(54, 162, 235)'   // Blue
@@ -1302,7 +1302,7 @@
             <!-- เพิ่มโลโก้ร้านที่นี่ -->
             <img src="https://github.com/safareelabaisor-ui/webdelivery/raw/eb89ddc5e12ccc02a1b1feead6afcf7ed5b877e6/k1.png" alt="โลโก้ร้าน" class="absolute top-8 left-8 h-24 w-24 rounded-full shadow-lg">
             
-            <h1 class="text-4xl font-extrabold text-slate-800">บัญชี รายรับ-รายจ่าย</h1>
+            <h1 class="text-4xl font-extrabold text-slate-800">บัญชีเดลิเวอรี่ รายรับ-รายจ่าย</h1>
             <p class="text-lg text-slate-600 mt-2">สำหรับร้านโครตจะแมนฮาลาล เดลิเวอรี่</p>
         </header>
 
