--- a/index.html
+++ b/index.html
@@ -1300,8 +1300,10 @@
     <div class="container mx-auto p-4 md:p-8">
         <header class="relative text-center mb-8">
             <!-- เพิ่มโลโก้ร้านที่นี่ -->
-            <img src="https://github.com/safareelabaisor-ui/webdelivery/raw/eb89ddc5e12ccc02a1b1feead6afcf7ed5b877e6/k1.png" alt="โลโก้ร้าน" class="absolute top-8 left-8 h-24 w-24 rounded-full shadow-lg">
-            
+            <img
+                src="https://github.com/safareelabaisor-ui/webdelivery/raw/eb89ddc5e12ccc02a1b1feead6afcf7ed5b877e6/k1.png"
+                alt="โลโก้ร้าน"
+                class="block mx-auto mb-4 h-24 w-24 rounded-full shadow-lg"/>
             <h1 class="text-4xl font-extrabold text-slate-800">บัญชีเดลิเวอรี่ รายรับ-รายจ่าย</h1>
             <p class="text-lg text-slate-600 mt-2">สำหรับร้านโครตจะแมนฮาลาล เดลิเวอรี่</p>
         </header>
@@ -1667,3 +1669,4 @@
 </body>
 
 </html>
+
