--- a/index.html
+++ b/index.html
@@ -143,11 +143,10 @@
                 document.getElementById('reset-filters-btn').addEventListener('click', resetFilters);
                 document.getElementById('export-csv-btn').addEventListener('click', () => exportToCSV(filteredTransactions));
                 document.getElementById('export-excel-btn').addEventListener('click', () => exportToExcel(filteredTransactions));
-
+                
                 // Add event listener for dynamic cost calculation
                 document.getElementById('order_list').addEventListener('input', calculateRawMaterialCost);
                 document.getElementById('customer-search-query').addEventListener('input', displayCustomers);
-
 
             } else {
                 console.error("Firebase config is missing. The app cannot function without it.");
@@ -847,7 +846,7 @@
                     </div>
                     <div>
                         <label class="block text-sm font-medium text-gray-700 mb-1">ค่าส่วนลดค่าส่ง (ไม่รวม VAT)</label>
-                        <input type="number" id="modal-shipping-discount-fee-excl-vat" value="${transactionData.shipping_discount_fee_excl_vat}" class="w-full px-3 py-2 border border-gray-300 rounded-md">
+                        <input type="number" id="modal-shipping-discount-fee-excl-vat" value="${transactionData.buyer_name}" class="w-full px-3 py-2 border border-gray-300 rounded-md">
                     </div>
                     <div>
                         <label class="block text-sm font-medium text-gray-700 mb-1">ค่า VAT</label>
