--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
         
         // --- GEMINI API Function to generate a report ---
         const GEMINI_API_URL = "https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=";
-        const API_KEY = ""; // Canvas provides this
+        const API_KEY = "AIzaSyCJjeCLIf46ie3KCUbF2_hLgZMAT8AamaM"; // Canvas provides this
 
         async function fetchGeminiReport() {
             const reportSection = document.getElementById('gemini-report-content');
@@ -1744,3 +1744,4 @@
 </body>
 
 </html>
+
