--- a/index.html
+++ b/index.html
@@ -605,8 +605,8 @@
         }
         
         // --- GEMINI API Function to generate a report ---
-        const GEMINI_API_URL = "https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent";
-        const API_KEY = "AIzaSyCJjeCLIf46ie3KCUbF2_hLgZMAT8AamaM"; // Canvas provides this
+        const GEMINI_API_URL = "https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=";
+        const API_KEY = "AIzaSyBcQIuSMOCOc9JrTRqC71Fk7brep96_sHE"; // Canvas provides this
 
         async function fetchGeminiReport() {
             const reportSection = document.getElementById('gemini-report-content');
